WanaLyzer/out/numpy/typing/tests/data/pass/dtype.pyi
from _typeshed import Incomplete

dtype_obj: Incomplete
void_dtype_obj: Incomplete

class Test:
    dtype: Incomplete
