WanaLyzer/out/numpy/typing/tests/data/fail/dtype.pyi
from _typeshed import Incomplete

class Test1:
    not_dtype: Incomplete

class Test2:
    dtype = float
